@@ -2300,11 +2300,11 @@ GStreamer stable release series. 2 modules have been released: Gstreamer Ugly Pl
 </p>
 <p>
 Check out release notes for
-<a href="&site;/releases/gst-plugins-ugly/0.10.2.html">gst-plugins-bad</a>,
-<a href="&site;/releases/gst-plugins-bad/0.10.1.html">gst-plugins-ugly</a>
+<a href="&site;/releases/gst-plugins-ugly/0.10.2.html">gst-plugins-ugly/a>,
+<a href="&site;/releases/gst-plugins-bad/0.10.1.html">gst-plugins-bad</a>
 or download tarballs 
-<a href="&site;/src/gst-plugins-base/gst-plugins-ugly-0.10.2.tar.bz2">gst-plugins-ugly</a>,
-<a href="&site;/src/gst-plugins-base/gst-plugins-bad-0.10.1.tar.bz2">gst-plugins-bad</a>
+<a href="&site;/src/gst-plugins-ugly/gst-plugins-ugly-0.10.2.tar.bz2">gst-plugins-ugly</a>,
+<a href="&site;/src/gst-plugins-bad/gst-plugins-bad-0.10.1.tar.bz2">gst-plugins-bad</a>
 </p>
     </content>
   </item>
